// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowMetadata modal operates 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
    }
  }
>
  <div
    className=""
  >
    <ul
      className="list-inline list-workflow-meta content-3 t-white"
    >
      <li
        className="list-inline-item content-3 "
      >
        Updated 
        just now
      </li>
      <li
        className="list-inline-item test-button content-3 "
        onClick={[Function]}
      >
        <u>
          public
        </u>
      </li>
    </ul>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      fade={true}
      isOpen={true}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata modal operates 2`] = `
<div
  className="modal-content"
>
  <ModalHeader
    className="dialog-header"
    tag="h4"
    toggle={[Function]}
    wrapTag="div"
  >
    <div
      className="dialog-header modal-header"
    >
      <h4
        className="modal-title"
      >
        <span
          className="t-d-gray title-4"
        >
          Privacy Setting
        </span>
      </h4>
      <button
        aria-label="Close"
        className="close"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </ModalHeader>
  <ModalBody
    className="dialog-body"
    tag="div"
  >
    <div
      className="dialog-body modal-body"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-3"
        >
          <div
            className="action-button button-full-blue"
            onClick={[Function]}
          >
            Public
          </div>
        </div>
        <div
          className="col-sm-9"
        >
          <p>
            Anyone can access and duplicate the workflow or any of its modules
          </p>
        </div>
      </div>
      <br />
      <div
        className="row d-flex align-items-center"
      >
        <div
          className="col-sm-3"
        >
          <div
            className="action-button button-gray test-button-gray"
            onClick={[Function]}
          >
            Private
          </div>
        </div>
        <div
          className="col-sm-9 mt-2"
        >
          <p>
            Only you can access and edit the workflow
          </p>
        </div>
      </div>
    </div>
  </ModalBody>
</div>
`;

exports[`WorkflowMetadata modal operates 3`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
    }
  }
>
  <div
    className=""
  >
    <ul
      className="list-inline list-workflow-meta content-3 t-white"
    >
      <li
        className="list-inline-item content-3 "
      >
        Updated 
        just now
      </li>
      <li
        className="list-inline-item test-button content-3 "
        onClick={[Function]}
      >
        <u>
          private
        </u>
      </li>
    </ul>
  </div>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata renders correctly 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [Function],
    }
  }
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
    }
  }
>
  <div
    className=""
  >
    <ul
      className="list-inline list-workflow-meta content-3 t-white"
    >
      <li
        className="list-inline-item content-3 "
      >
        Updated 
        just now
      </li>
      <li
        className="list-inline-item test-button content-3 "
        onClick={[Function]}
      >
        <u>
          public
        </u>
      </li>
    </ul>
  </div>
</WorkflowMetadata>
`;
